# packages/api-proxy/src/v3/bsc/wallets/wallets.controller.ts
@@ -92,7 +92,7 @@ import {
   CreateNftFlushRequestDTO,
 } from "../../klay/wallets/dto/create-flush-request.dto";
 import { TransferNftRequestDTO } from "../../eth/wallets/dto/transfer-nft-request.dto";
-import { NftBalanceDTO } from "../../eth/dto/nft-balance.dto";
+import { NftBalanceDTO } from "../../klay/dto/nft-balance.dto";
 import { NftTransferDTO } from "../../eth/dto/nft-transfer.dto";
 import {
   EventStatus,
@@ -891,12 +891,12 @@ export class WalletsController {
   }
 
   @Get("/:masterWalletId/nft/transfers")
+  @PathParams(MASTER_WALLET_ID_REQUIRED)
   @Queries(
     NFT_ID_OPTIONAL,
     TOKEN_NAME_OPTIONAL,
     TOKEN_ONCHAIN_ID_OPTIONAL,
     USER_WALLET_ID_OPTIONAL,
-    MASTER_WALLET_ID_REQUIRED,
     TRANSACTION_ID_OPTIONAL,
     TRANSACTION_HASH_OPTIONAL,
     STATUS_OPTIONAL,
@@ -925,7 +925,7 @@ export class WalletsController {
   @ReadMeExtension()
   public async getNftTransfers(
     @Request() request: express.Request,
-    @Param("masterWalletId") walletId?: string,
+    @Param("masterWalletId") walletId: string,
     @Query("nftId") nftId?: number,
     @Query("tokenName") tokenName?: string,
     @Query("tokenOnchainId") tokenOnchainId?: string,
